# PyRLUtils

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
.circleci/: config.yml
doc/: conf.py  index.rst  requirements.txt
pyrlutils/: action.py  policy.py  reward.py  state.py  transition.py  valuefcns.py  values.py
pyrlutils/bandit/: algo.py  reward.py
pyrlutils/dp/: valuefcns.py
pyrlutils/helpers/: exceptions.py
pyrlutils/openai/: utils.py
pyrlutils/td/: sarsa.py  state_td.py  td.py  utils.py
src/pyrlutils/: action.py  policy.py  reward.py  state.py  transition.py
src/pyrlutils/bandit/: algo.py  reward.py
src/pyrlutils/dp/: valuefcns.py
src/pyrlutils/helpers/: exceptions.py
src/pyrlutils/openai/: utils.py
src/pyrlutils/state/: continuous.py  discrete.py  discretecoords.py  utils.py
src/pyrlutils/td/: doubleqlearn.py  qlearn.py  sarsa.py  state_td.py  utils.py
test/: test_2ddiscrete.py  test_2dmaze.py  test_Q_selection_action.py  test_action.py  test_bandits.py  test_continous_state_actions.py  test_frozenlake.py  test_gym.py  test_policy.py  test_rewards.py  test_state.py  test_td.py  test_transprobs.py
