[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrlutils"
version = "0.1.0"
authors = [
    {name = "Kwan Yuet Stephen Ho", email = "stephenhky@yahoo.com.hk"}
]
description = "Utility and Helpers for Reinformcement Learning"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
keywords = ["machine learning", "reinforcement leaning", "artificial intelligence"]
requires-python = ">=3.10"
classifiers = [
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
dependencies = ["numpy", "typing-extensions"]

[project.urls]
Repository = "https://github.com/stephenhky/PyRLUtils"
Issues = "https://github.com/stephenhky/PyRLUtils/issues"

[tool.setuptools]
packages = ["pyrlutils", "pyrlutils.bandit", "pyrlutils.openai", "pyrlutils.dp", "pyrlutils.td", "pyrlutils.helpers"]
zip-safe = false

[project.optional-dependencies]
openaigym = ["gymnasium"]
test = ["unittest"]
